# auto_llm_chatbot

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  cmd  pyproject.toml    setup.cfg  setup.py
auto_llm_chatbot/: __init__.py  chatbot.py  chroma_handler.py  llm.py  requirements.txt
auto_llm_chatbot/example/: example-1.py
src/: chatbot.py  chroma_handler.py  llm.py
