[metadata]
name = auto_llm_chatbot
version = 0.1.2
author = Dipesh Paul
author_email = dipesh.paul@systango.com
description = A Python package for LLM chatbot with auto RAG Chat History Management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipeshpaulsystango/auto_llm_chatbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    ollama==0.3.2
    openai==1.43.0
    lazyme==0.0.27
    chromadb==0.5.4