[metadata]
name = auto_llm_chatbot
version = 0.1.4
author = Dipesh Paul
author_email = dipesh.paul@systango.com
description = Auto LLM Chatbot is a Python package that simplifies chatbot development by automatically managing chat history using local vector databases like Chroma DB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipeshpaulsystango/auto_llm_chatbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    ollama==0.3.2
    openai==1.43.0
    lazyme==0.0.27
    chromadb==0.5.4